jump fix

--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -38,7 +38,7 @@
     position: absolute;
     width: 96px;
     height: 50px;
-    background: url(../../assets/gothic-hero-attack.png);
+    background: url(/assets/gothic-hero-attack.png);
     animation: sprite_attack 500ms steps(6) infinite;
 }
 
